--- a/404.md
+++ b/404.md
@@ -1,11 +1,12 @@
 ---
 layout: center
-permalink: /404.html
+permalink: "/404.html"
 ---
 
 # 404
 
-Sorry, we can't seem to find this page's pixylls.
+Entschuldigung, aber die Seite können wir bei Wolust nicht finden !
+
 
 <div class="mt3">
   <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
