404 jetzt mit Kuh

--- a/404.md
+++ b/404.md
@@ -4,6 +4,20 @@ permalink: "/404.html"
 ---
 
 # 404
+ <pre>
+ ________________________________________
+/  Entschuldigung, aber diese Seite      \
+| kann die Kuh bei Wolust nicht finden !  |
+\  Muh !                                  /
+ ----------------------------------------
+              \   ^__^
+               \  (oo)\_______
+                  (__)\       )\/\
+                      ||----w |
+                      ||     ||
+</pre> 
+
+
 
 Entschuldigung, aber die Seite können wir bei Wolust nicht finden !
 
