404 jetzt mit Kuh

--- a/404.md
+++ b/404.md
@@ -6,8 +6,8 @@ permalink: "/404.html"
 # 404
  <pre>
  ________________________________________
-/  Entschuldigung, aber diese Seite      \
-| kann die Kuh bei Wolust nicht finden !  |
+/  Entschuldigung, aber diese Seite kann  \
+|  die Kuh bei Wolust.de nicht finden !    |
 \  Muh !                                  /
  ----------------------------------------
               \   ^__^
@@ -16,12 +16,6 @@ permalink: "/404.html"
                       ||----w |
                       ||     ||
 </pre> 
-
-
-
-Entschuldigung, aber die Seite können wir bei Wolust nicht finden !
-
-
 <div class="mt3">
   <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
   <a href="{{ site.baseurl }}/contact/" class="button button-blue button-big">Contact</a>
