--- a/_posts/2020-11-01-stammtiche-2021.md
+++ b/_posts/2020-11-01-stammtiche-2021.md
@@ -6,7 +6,7 @@ update_date: "''"
 categories:
 - linux
 - worms
-summary: in Vorbereitung
+summary: Zusammenfassung und Stichpunkte
 description: Kurzer Report der Wolust Stammtische 2021
 last_modified_at: Nov 04, 2020 8:34 PM
 ---
