--- a/_posts/2020-11-01-stammtiche-2021.md
+++ b/_posts/2020-11-01-stammtiche-2021.md
@@ -8,7 +8,7 @@ categories:
 - worms
 summary: Zusammenfassung und Stichpunkte
 description: Kurzer Report der Wolust Stammtische 2021
-last_modified_at: Nov 04, 2020 8:34 PM
+last_modified_at: {% last_modified_at %}
 ---
 
 Kurze Zusammenfasung der Themen der Abende. Nicht nur Linux
