--- a/_posts/2020-11-01-stammtiche-2021.md
+++ b/_posts/2020-11-01-stammtiche-2021.md
@@ -16,3 +16,11 @@ Kurze Zusammenfasung der Themen der Abende. Nicht nur Linux
  {% for review  in site.data.review-2021.linuxuser %}
       {{ review.inhalt }} 
  {% endfor %}
+<script src="https://utteranc.es/client.js"
+        repo="https://github.com/Wolust/"
+        issue-term="pathname"
+        label="lolo98"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
