--- a/_posts/2020-11-01-stammtiche-2021.md
+++ b/_posts/2020-11-01-stammtiche-2021.md
@@ -17,7 +17,7 @@ Kurze Zusammenfasung der Themen der Abende. Nicht nur Linux
       {{ review.inhalt }} 
  {% endfor %}
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/Wolust/"
+        repo="https://github.com/Wolust/wolust.github.io"
         issue-term="pathname"
         label="lolo98"
         theme="github-light"
