letzter Test 2022 Vorbereitung

--- a/_posts/2021-11-06-stammtische-2021.md
+++ b/_posts/2021-11-06-stammtische-2021.md
@@ -10,5 +10,11 @@ description: Kurzer Report der Wolust Stammtische 2022
 last_modified_at: {}
 ---
 
-**Fröhliche Weihnachten und einen gutenRutsch**
+**Fröhliche Weihnachten und einen guten Rutsch**
 Noch kein Inhalt
+
+Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux
+
+ {% for review  in site.data.review-2022.linuxuser %}
+      {{ review.inhalt }} 
+ {% endfor %}
