Linkliste in md verwandelt und integriert. Links aus dem Review funktionieren endlich, Vorträge noch mal durchgesehen  und Author tag eingefügt.

--- a/_posts/2021-11-06-stammtische-2021.md
+++ b/_posts/2021-11-06-stammtische-2021.md
@@ -11,7 +11,6 @@ last_modified_at: {}
 ---
 
 **Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux**
-
  {% for review  in site.data.review-2022.linuxuser %}
-      {{ review.inhalt }} 
+     {{ review.inhalt }}  [{{ review.link | absolute_url }}]({{ review.link | absolute_url }})
  {% endfor %}
