Noch mehr Vorträge bei talk.md eingetragen  2020,2019, 2018  auf Links durchsucht und korrigiert

--- a/_posts/2020-11-01-stammtiche-2021.md
+++ b/_posts/2020-11-01-stammtiche-2021.md
@@ -14,6 +14,6 @@ last_modified_at: {{ page.last_modified_at }}
 Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux
 
  {% for review  in site.data.review-2021.linuxuser %}
-      {{ review.inhalt }} 
+      {{ review.inhalt }} [{{ review.link | absolute_url }}]({{ review.link | absolute_url }})
  {% endfor %}
 
