Stadtlan entfernt. Karte ist jetzt direkt in Termine

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -1,7 +1,71 @@
 ---
 title: Termine
-description: Ohne
+tags: Stadtplan,  Map, Karte
 ---
 {% assign next = site.data.daten.linuxuser[0] %}
-Nächster Wolust:
-<p> {{next.tag}}.{{next.monat}}.{{next.jahr}} {{next.start}} : {{next.ort}} </p>
+{% if next.ort contains "Hochschule" %}
+  {% assign ort = "Hochschule" %}
+  {% assign geo = "9.635074, 8.345403" %}
+  Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} in der Hochschule Worms <br />
+Der Stammtisch ist jährlich in den Räumen der [Hochschule- Worms](https://www.hs-worms.de/lpd-2022-2/),<br />Gebäude N 1. Stock Erenburgerstr. Worms.<br />
+Diesmal nicht im Timescafe
+{% elsif next.ort contains "Timescafe" %}
+  {% assign ort = "Timescafe" %}
+  {% assign geo = "49.632493, 8.363262" %}
+  Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} im Timescafe
+ <ul>
+ <li>WOLUST jeden Monat am 1. Dienstag</li>
+ </ul>
+  Im [Timescafe](http://www.timescafe.de), Worms Ludwigsplatz / im Sommer sitzen wir gern draußen.
+{% else %}
+  {% assign ort = "dummy" %}
+ Keine Karte gefunden. Exception 404
+ <pre>
+ ________________________________________
+/ Es gibt keinen Stadtplan für {{ ort }} .   \
+| Nur für die Orte \“Hochschule\” und           |
+| \“Timescafe\” sind Daten hinterlegt.   |
+| Bitte 1.Wert \“ort\” in \“daten.yaml\” |
+\ anpassen !                             /
+ ----------------------------------------
+              \   ^__^
+               \  (oo)\_______
+                  (__)\       )\/\
+                      ||----w |
+                      ||     ||
+</pre>
+</div>
+{% endif %}
+<div id="mapid" style="height: 637px;"></div>
+<script>
+	var mymap = L.map('mapid').setView([49.63290, 8.36309], 13);
+	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiZGV3b21zZXIiLCJhIjoiY2p1NXByNTI1MHF3NjRkbzJ4bzdyemRrayJ9.gs3MZEcigyG_wdlH_q1Q1w', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox/streets-v11',
+		tileSize: 512,
+		zoomOffset: -1
+	}).addTo(mymap);
+ L.marker([{{ geo }}]).addTo(mymap).bindPopup('<b>Linux Stammtisch !</b><br>im Timescafe.').openPopup();
+ var circle = L.circle([{{ geo }}], 500, {
+		color: 'grey',
+		fillColor: '#f03',
+		fillOpacity: 0.2
+	}).addTo(mymap).bindPopup("Maximal noch 500 Meter");
+	var popup = L.popup();
+	function onMapClick(e) {
+		popup
+			.setLatLng(e.latlng)
+			.setContent("You clicked the map at " + e.latlng.toString())
+			.openOn(mymap);
+	}
+	mymap.on('click', onMapClick);
+</script>
+{% if ort == "Timescafe" %}
+Das TimesCafe ist vom Bahnhof zu Fuß in circa 10 Minuten erreichbar.
+<s>Eine Tiefgarage gibt es unter dem Ludwigsplatz, direkt vor dem Cafe</s>
+{% else ort == "Hochschule" %}
+Wege zur Veranstaltung : zu Fuß, Bus, Bahn, Auto
+{% endif %}
