Test 2023  mit avatar und Zeugs

--- a/_posts/2022-11-17-stammtische-2023.md
+++ b/_posts/2022-11-17-stammtische-2023.md
@@ -7,11 +7,19 @@ categories:
 - linux
 - worms
 summary: Zusammenfassung und Stichpunkte
-description: Kurzer Report der Wolust Stammtische 2020
+description: Kurzer Report der Wolust Stammtische 2023
 last_modified_at: Nov 11, 2022 8:34 PM
 ---
 
 **Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux**
- {% for review  in site.data.review-2023.linuxuser %}
-     {{ review.inhalt }}  [{{ review.link | absolute_url }}]({{ review.link | absolute_url }})
- {% endfor %}
+{% for review  in site.data.review-2023.linuxuser %}
+{{ review.inhalt }}
+{% if review.link %}
+**interner Link:**
+[{{ review.link | absolute_url }}]({{ review.link | absolute_url }})
+{% endif %}
+{% if review.editor %}
+**Editor:**
+[{% avatar{{ review.editor }} %}](https://github.com/{{ review.editor }})
+{% endif %}
+{% endfor %}
