--- a/_posts/2022-11-17-stammtische-2023.md
+++ b/_posts/2022-11-17-stammtische-2023.md
@@ -18,8 +18,11 @@ last_modified_at: Nov 11, 2022 8:34 PM
 **interner Link:**
 [{{ review.link | absolute_url }}]({{ review.link | absolute_url }})
 {% endif %}
-{% if review.editor %}
+{% if review.editor=='dewomser' %}
 **Editor:**
-[{% avatar{{ review.editor }} %}](https://github.com/{{ review.editor }})
+[{% avatar dewomser %}](https://github.com/dewomser)
+{% elsif review.editor=='cmuench' %}
+**Editor:**
+[{% avatar cmuench %}](https://github.com/cmuench)
 {% endif %}
 {% endfor %}
