Satware als Wolust Standort eingfügt .Startseite auf Änderung hingewiesen. Typos

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -17,6 +17,17 @@ Diesmal nicht im Timescafe
  <li>WOLUST jeden Monat am 1. Dienstag</li>
  </ul>
   Im [Timescafe](http://www.timescafe.de), Worms Ludwigsplatz / im Sommer sitzen wir gern draußen.
+
+{% elsif next.ort contains "satware" %}
+  {% assign ort = "satware AG" %}
+  {% assign geo = "49.633636, 8.351347" %}
+  Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} bei der Firma satware AG Friedrich-Ebert-Straße 34
+ <ul>
+ <li>WOLUST jeden Monat am 1. Dienstag</li>
+ </ul>
+  Ausnahmsweise dort.
+
+
 {% else %}
   {% assign ort = "dummy" %}
  Keine Karte gefunden. Exception 404
@@ -48,7 +59,7 @@ Diesmal nicht im Timescafe
 		tileSize: 512,
 		zoomOffset: -1
 	}).addTo(mymap);
- L.marker([{{ geo }}]).addTo(mymap).bindPopup('<b>Linux Stammtisch !</b><br>im Timescafe.').openPopup();
+ L.marker([{{ geo }}]).addTo(mymap).bindPopup('<b>Linux Stammtisch !</b><br>Satware AG.').openPopup();
  var circle = L.circle([{{ geo }}], 500, {
 		color: 'grey',
 		fillColor: '#f03',
