Wenn man nicht alles automatisiert braucht man sich nicht wundern satware-Timescafe

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -56,7 +56,7 @@ Diesmal nicht im Timescafe
 		tileSize: 512,
 		zoomOffset: -1
 	}).addTo(mymap);
- L.marker([{{ geo }}]).addTo(mymap).bindPopup('<b>Linux Stammtisch !</b><br>Satware AG.').openPopup();
+ L.marker([{{ geo }}]).addTo(mymap).bindPopup('<b>Linux Stammtisch !</b><br>Timescafe').openPopup();
  var circle = L.circle([{{ geo }}], 500, {
 		color: 'grey',
 		fillColor: '#f03',
