Termine besser angekündigt und den Issue Chat in Kontakt verwandelt

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -3,6 +3,7 @@ title: Termine
 tags: Stadtplan,  Map, Karte
 ---
 {% assign next = site.data.daten.linuxuser[0] %}
+{% assign nextall = site.data.daten.linuxuser %}
 {% if next.ort contains "Hochschule" %}
   {% assign ort = "Hochschule" %}
   {% assign geo = "9.635074, 8.345403" %}
@@ -44,6 +45,7 @@ Diesmal nicht im Timescafe
 </pre>
 </div>
 {% endif %}
+
 <div id="mapid" style="height: 637px;"></div>
 <script>
 	var mymap = L.map('mapid').setView([49.63290, 8.36309], 13);
@@ -73,7 +75,11 @@ Diesmal nicht im Timescafe
 </script>
 {% if ort == "Timescafe" %}
 Das TimesCafe ist vom Bahnhof zu Fuß in circa 10 Minuten erreichbar.
-<s>Eine Tiefgarage gibt es unter dem Ludwigsplatz, direkt vor dem Cafe</s>
 {% else ort == "Hochschule" %}
 Wege zur Veranstaltung : zu Fuß, Bus, Bahn, Auto
 {% endif %}
+<strong>Spätere Stammtische:</strong>
+<ul>
+<li>Wir sind am {{nextall[1].tag}}.{{nextall[1].monat}}.{{nextall[1].jahr}} um {{nextall[1].start}} in {{nextall[1].ort}}</li>
+<li>Wir sind am {{nextall[2].tag}}.{{nextall[2].monat}}.{{nextall[2].jahr}} um {{nextall[2].start}} in {{nextall[2].ort}}</li>
+</ul>
