--- a/_linkliste/wolust231124.md
+++ b/_linkliste/wolust231124.md
@@ -1,24 +1,18 @@
 ---
-title: Linux presentation day 23.1
+title: Linux presentation day 23.2
 description: LPD an der Hochschule Worms
 ---
 
-\[15:00-15:05\]	N144	__Prof. Dr. Thielen__, Hochschule Worms	Begrüßung
+\[15:00-15:05\]	N142	__Prof. Dr. Thielen__, Hochschule Worms	Begrüßung
 
-\[15:15-16:30\]	N140	__H. Gulino__, Hochschule Worms	Workshop 1: LibreOffice für Anfänger:innen
+\[15:05-18:00\]	N142	Linux-Enthusiasten und Neugierige	Schauen, schnacken, Hilfe bei der Linux-Installation auf mitgebrachte Laptops / PCs
 
-\[15:15-18:00\]	N141	__alle__	Schauen, reden, schwärmen, fragen, Informationen und Hilfe bei Linux-Fragen bekommen
+\[15:15-15:45\]	N140	__Stefan Höhn__, WOLUST	Einfache Nutzung der Kommandozeile / Bash
 
-\[15:15-18:00\]	N142	__alle__	Labor-Notebooks der Hochschule mit verschiedenen Linux-Derivaten selbst ausprobieren, diskutieren, fragen
+\[16:00-16:45\]	N140	__Dankward Nürenberg__, WOLUST	Programmieren des Raspberry pi pico leicht gemacht mit Micropython
 
-\[15:15-15:45\]	N144	__Prof. Dr. Thielen__, Hochschule Worms	Vortrag 1: "Was ist Linux", Freie Software Lizenzen
+\[16:50-17:05\]	N140	__Klaus Ramstöck__, WOLUST	Mobile Linux – ein Selbstversuch
 
-\[16:00-16:15\]	N144	__K. Ramstöck__, Wolust	Vortrag 2: WSL – Windows Subsystem for Linux
+\[17:10-17:55\]	N140	__Prof. Dr. Thielen__, Hochschule Worms	"Was ist Linux" / Freie Software Lizenzen
 
-\[16:30-17:00\]	N144	__S. Höhn__, Wolust	Vortrag 3: APIs und Bash-Kommandozeile / Wolust
-
-\[16:45-18:00\]	N140	__Prof. Dr. Thielen__, Hochschule Worms	Workshop 2: Linux-Kommandozeile für Anfänger:innen
-
-\[17:00-17:30\]	N144	__Prof. Dr. Wendzel__, Hochschule Worms	Vortrag 4: Penetration-Testing mit Linux
-
-\[18:00-18:05ß]	N144	__Prof. Dr. Thielen__, Hochschule Worms	Verabschiedung
+\[18:00-18:05\]	N142	__Prof. Dr. Thielen__, Hochschule Worms	Verabschiedung
