--- a/_linkliste/wolust241001.md
+++ b/_linkliste/wolust241001.md
@@ -8,7 +8,7 @@ description: Wolust Links zum Treffen
 * [Nextcloud AIO](https://nextcloud.com/de/blog/how-to-install-the-nextcloud-all-in-one-on-linux/)
 * [tldr bessere Manpage für tar](https://tldr.sh/)
 * [Bashskripte mit AI Beispiele](https://gist.github.com/dewomser)
-* Zu den Akku-Lademanager-Platinchen gibts bald einen Vortrag/Workshop von Dankwart
+* Zu den Akku-Lademanager-Platinchen gibts bald einen Vortrag/Workshop von Dankward [{% avatar Dankward15738 %}](https://github.com/Dankward15738)
 
 ## Stefan bei der Froscon
 Fragen an die Standbetreiber
