chore: update site structure and styling for Docusaurus migration

--- a/blog/2022-11-19-lolo.md
+++ b/blog/2022-11-19-lolo.md
@@ -1,29 +1,33 @@
 ---
 title: Termine
-date: 
+date: 2022-11-19
 ---
 
 Der Stammtisch ist jährlich in den Räumen der [Hochschule- Worms](https://www.hs-worms.de/lpd-2022-2/),<br />Gebäude N 1. Stock Erenburgerstr. Worms.<br />
 Diesmal nicht im Timescafe
- <li>WOLUST jeden Monat am 1. Dienstag</li>
+
+- WOLUST jeden Monat am 1. Dienstag  
   Im [Timescafe](http://www.timescafe.de), Worms Ludwigsplatz / im Sommer sitzen wir gern draußen.
-  <li>WOLUST jeden Monat am 1. Dienstag</li>
+- WOLUST jeden Monat am 1. Dienstag  
   Ausnahmsweise dort.
- Keine Karte gefunden. Exception 404
- <pre>
+
+Keine Karte gefunden. Exception 404
+
+```
  ________________________________________
-| Nur für die Orte \“Hochschule\” und           |
-| \“Timescafe\” sind Daten hinterlegt.   |
-| Bitte 1.Wert \“ort\” in \“daten.yaml\” |
+| Nur für die Orte "Hochschule" und           |
+| "Timescafe" sind Daten hinterlegt.   |
+| Bitte 1.Wert "ort" in "daten.yaml" |
 \ anpassen !                             /
  ----------------------------------------
               \   ^__^
                \  (oo)\_______
-                  (__)\       )\/\
+                  (__)\       )\/
                       ||----w |
                       ||     ||
-</pre>
-</div>
+```
+
+<!--
 <div id="mapid" style="height: 637px;"></div>
 <script>
 	var mymap = L.map('mapid').setView([49.63290, 8.36309], 13);
@@ -49,6 +53,7 @@ Diesmal nicht im Timescafe
 	}
 	mymap.on('click', onMapClick);
 </script>
+-->
 Das TimesCafe ist vom Bahnhof zu Fuß in circa 10 Minuten erreichbar.
 Wege zur Veranstaltung : zu Fuß, Bus, Bahn, Auto
 <strong>Spätere Stammtische:</strong>
