chore: clean up markdown files and improve formatting

--- a/blog/2020-11-01-stammtiche-2021.md
+++ b/blog/2020-11-01-stammtiche-2021.md
@@ -5,165 +5,167 @@ date: '2020-11-01 08:34:00'
 
 Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux
 
+<!-- truncate -->
+
 ### Monat 12
 07.12.2021
 
-<ul><li>Zeige Deine Bash History !</li>
-<li>Verschiedene 3D-Drucker und Druckmethoden Vorführung</li>
-<li>Design und Anspruch</li>
-<li>Smarpt Design mit der Laubsäge</li>
-<li>Docker, was ist da kompliziert?</li>
-<li>Messstrippen</li>
-<li>Raspberrypi als Mediaserver </li>
-<li>USB als virtuelle CD-Rom</li>
-<li>Essen: Gnocchi und Schnitzel</li></ul>
+- Zeige Deine Bash History !
+- Verschiedene 3D-Drucker und Druckmethoden Vorführung
+- Design und Anspruch
+- Smarpt Design mit der Laubsäge
+- Docker, was ist da kompliziert?
+- Messstrippen
+- Raspberrypi als Mediaserver 
+- USB als virtuelle CD-Rom
+- Essen: Gnocchi und Schnitzel
 
 
 ### Monat 11
 02.11.2021
 
-<ul><li>Die Shell: Wenige Zeilen Code</li>
-<li>Raspberry Pi Sachen basteln mit Linux und Python</li>
-<li>Nextcloud mit allem.</li>
-<li>PHP 7 .x+8.x und PHPUnit</li>
-<li>Alles gedockert</li>
-<li>Software aus China, Russland, Nordkorea</li>
-<li>Windows 11 auf dem Tuxedo Notebook</li>
-<li>microPython</li></ul>
+- Die Shell: Wenige Zeilen Code
+- Raspberry Pi Sachen basteln mit Linux und Python
+- Nextcloud mit allem.
+- PHP 7 .x+8.x und PHPUnit
+- Alles gedockert
+- Software aus China, Russland, Nordkorea
+- Windows 11 auf dem Tuxedo Notebook
+- microPython
 
 
 ### Monat 10
 05.10.2021
 
-<ul><li>Android Hintergrund selbst programmieren (dynamisch)</li>
-<li>ZFS Deduplizieren</li>
-<li>Die Varianten von top</li>
-<li>Podcasts Thema Linux</li>
-<li>Verschlüsseln</li>
-<li>Ein universelles Trackingtool mit Raspberry Pi</li>
-<li>CovPass-Check-App</li>
-<li>IPv6</li></ul>
+- Android Hintergrund selbst programmieren (dynamisch)
+- ZFS Deduplizieren
+- Die Varianten von top
+- Podcasts Thema Linux
+- Verschlüsseln
+- Ein universelles Trackingtool mit Raspberry Pi
+- CovPass-Check-App
+- IPv6
 
 
 ### Monat 9
 07.09.2021
 
-<ul><li>Linux Kernel mit  Arch mit KDE</li>
-<li>Kernel kein Linux.</li>
-<li>Selbsterstellte Zertifikate und Firefox.</li>
-<li>Kompilieren von Hardwaretreiber.</li>
-<li>Uraltnetbook als Bildershow.</li>
-<li>Kellerentfeuchter  funktioniert.</li>
-<li>Corona im Krankenhaus und Quarantäne.</li>
-<li>Die Bash … Wunder was da alles geht.</li>
-<li>DSL , ISDN, Modem</li>
-<li>git commit checkout als Backup ?</li>
-<li>Brettspiele 18XX-Reihe</li>
-<li>CI/CD mit Robot Framework und der Kampf um Budgets</li>
-<li>Mattermost vs. Matrix</li>
-<li>Manjaro, das Arch der Faulen</li>
-<li>Nexus Artefact Repository (Hammer)</li>
-<li>Die Funzel und Willi</li></ul>
+- Linux Kernel mit  Arch mit KDE
+- Kernel kein Linux.
+- Selbsterstellte Zertifikate und Firefox.
+- Kompilieren von Hardwaretreiber.
+- Uraltnetbook als Bildershow.
+- Kellerentfeuchter  funktioniert.
+- Corona im Krankenhaus und Quarantäne.
+- Die Bash … Wunder was da alles geht.
+- DSL , ISDN, Modem
+- git commit checkout als Backup ?
+- Brettspiele 18XX-Reihe
+- CI/CD mit Robot Framework und der Kampf um Budgets
+- Mattermost vs. Matrix
+- Manjaro, das Arch der Faulen
+- Nexus Artefact Repository (Hammer)
+- Die Funzel und Willi
 
 ### Monat 8
 03.08.2021
 
-<ul><li>RAID-System 0,1,5,… 51 und andere in  Hardware und Software</li>
-<li>Matrix und Bridging</li>
-<li>Nextcloud Bridging</li>
-<li>Corona Warnapps + Luca</li>
-<li>Esp32 kann PC emulieren</li>
-<li>iPhone ist kaputt  "Pegasus"-Hack</li></ul>
+- RAID-System 0,1,5,… 51 und andere in  Hardware und Software
+- Matrix und Bridging
+- Nextcloud Bridging
+- Corona Warnapps + Luca
+- Esp32 kann PC emulieren
+- iPhone ist kaputt  "Pegasus"-Hack
 
 
 ### Monat 7
 06.07.2021
 
-<ul><li>Einchecken mit der Corona-Warn-App</li>
-<li>Github Copilot</li>
-<li>Das neue Arduino. Hard- und Software</li>
-<li>H2 fürs Auto  Vor- Nachteile</li>
-<li>GPS auswerten</li>
-<li>Linux Kernel und die Zukunft</li>
-<li>Arch installiert RPM und deb</li>
-<li>Fedora ~ Redhat</li>
-<li>Python und Pointer</li>
-<li>Volkshochschule Worms</li>
-<li>Schnitzel und Bier.</li></ul>
+- Einchecken mit der Corona-Warn-App
+- Github Copilot
+- Das neue Arduino. Hard- und Software
+- H2 fürs Auto  Vor- Nachteile
+- GPS auswerten
+- Linux Kernel und die Zukunft
+- Arch installiert RPM und deb
+- Fedora ~ Redhat
+- Python und Pointer
+- Volkshochschule Worms
+- Schnitzel und Bier.
 
 
 
 ### Monat 6
 01.06.2021
 
-<ul><li>Linux Tools für den Alltag (ulauncher, autokey)</li>
-<li>Wettervorhersage mit Opendata von DWD für Worms als Einzeiler in Bash</li>
-<li>Wetterseite der Hochschule hat immer noch Probleme mit der Uhrzeit. Mischmasch GMT und MESZ </li>
-<li>ESP32 programmieren. Unterschiede zum Arduino. Programmierbar mit Arduino</li>
-<li>Lüftersteuerung im Keller funktioniert endlich</li>
-<li>VHS.cloud BBB Desktopfreigabe funktioniert nur beim Administrator</li>
-<li>VHS Real Wir sind aus dem Programm gefallen?</li>
-<li>Mattermost </li>
-<li>Wolust.de ist jetzt eine PWA</li></ul>
+- Linux Tools für den Alltag (ulauncher, autokey)
+- Wettervorhersage mit Opendata von DWD für Worms als Einzeiler in Bash
+- Wetterseite der Hochschule hat immer noch Probleme mit der Uhrzeit. Mischmasch GMT und MESZ 
+- ESP32 programmieren. Unterschiede zum Arduino. Programmierbar mit Arduino
+- Lüftersteuerung im Keller funktioniert endlich
+- VHS.cloud BBB Desktopfreigabe funktioniert nur beim Administrator
+- VHS Real Wir sind aus dem Programm gefallen?
+- Mattermost 
+- Wolust.de ist jetzt eine PWA
 
 ### Monat 5
 04.05.2021
 
-<ul><li>Webseite wolust.de administrieren mit und ohne Jekyll</li>
-<li>Universal-Logger Xtrinsic-Board am Raspberry Pi hat jetzt 2 Taster Ein/Aus</li>
-<li>Freies Android auf Volla Phone</li>
-<li>Grafana hat 100.000 kleine Zacken ohne Bedeutung sieht aber gut aus.</li>
-<li>Ingenieur kann Pumpe nach Leistungsanforderungen auswählen oder mit dem Chef verhandeln</li>
-<li>Kühe als Haustiere oder Nutztiere</li>
-<li>Hackerkultur in Frankreich?</li>
-<li>Pornografischer Desktophintergrund bei Ubuntu 20.4</li></ul>
+- Webseite wolust.de administrieren mit und ohne Jekyll
+- Universal-Logger Xtrinsic-Board am Raspberry Pi hat jetzt 2 Taster Ein/Aus
+- Freies Android auf Volla Phone
+- Grafana hat 100.000 kleine Zacken ohne Bedeutung sieht aber gut aus.
+- Ingenieur kann Pumpe nach Leistungsanforderungen auswählen oder mit dem Chef verhandeln
+- Kühe als Haustiere oder Nutztiere
+- Hackerkultur in Frankreich?
+- Pornografischer Desktophintergrund bei Ubuntu 20.4
 
 ### Monat 4
 06.04.2021
 
-<ul><li>IRC Kanal #Wolust und Bridge für Nextcloud Talk</li>
-<li>Alpine Linux für Container</li>
-<li>NFC-Tag und der Hersteller NXP</li>
-<li>Jekyll im Dockercontainer macht wolust.de</li>
-<li>Grafana und InfluxDB . Das neue Flash? oder macht es doch Sinn.</li>
-<li>Corona und Wolust. Corona und impfen bei Übergewicht. </li>
-<li>Feuer im Rechenzentrum. Was war in Straßburg ?</li>
-<li>Explosionen im Betrieb und Brandverletzung</li></ul>
+- IRC Kanal #Wolust und Bridge für Nextcloud Talk
+- Alpine Linux für Container
+- NFC-Tag und der Hersteller NXP
+- Jekyll im Dockercontainer macht wolust.de
+- Grafana und InfluxDB . Das neue Flash? oder macht es doch Sinn.
+- Corona und Wolust. Corona und impfen bei Übergewicht. 
+- Feuer im Rechenzentrum. Was war in Straßburg ?
+- Explosionen im Betrieb und Brandverletzung
 
 ### Monat 3
 02.03.2021
 
-<ul><li>Matrix Server selbst gehostet Postgres</li>
-<li>IRC Headless mit WeeChat IRC-Client als Webinterface und Konversation</li>
-<li>Wolust hat einen eigenen IRC-Kanal</li>
-<li>Nextcloud 21 nicht für den Raspberry Pi geeignet</li>
-<li>Waschmaschinensteuerung selbst gemacht klappt nicht</li>
-<li>Impfen, wir hatten super Ideen</li>
-<li>433 MHz funkt immer noch nicht</li></ul>
+- Matrix Server selbst gehostet Postgres
+- IRC Headless mit WeeChat IRC-Client als Webinterface und Konversation
+- Wolust hat einen eigenen IRC-Kanal
+- Nextcloud 21 nicht für den Raspberry Pi geeignet
+- Waschmaschinensteuerung selbst gemacht klappt nicht
+- Impfen, wir hatten super Ideen
+- 433 MHz funkt immer noch nicht
 
 
 ### Monat 2
 03.02.2021
 
-<ul><li>Mikrofon/Soundprobleme einiger Teilnehmer</li>
-<li>Hausautomation mit Tasmota und 1-Wire</li>
-<li>Displays ansteuern i2C,SPI und 4-Bit</li>
-<li>Silvesterraketen elektronische Payload und das Recht§.</li>
-<li>Solid Internet von Tim Berners-Lee</li>
-<li>SSH-Logging auswerten mit einem Perlscript</li>
-<li>433 MHz und der Manchester-Code</li>
-<li>Verkehrsprobleme lösen: Tesla, Wasserstoff oder Umzug</li>
-<li>VHS-Linux-Anfängerabend muss vorbereitet werden</li></ul>
+- Mikrofon/Soundprobleme einiger Teilnehmer
+- Hausautomation mit Tasmota und 1-Wire
+- Displays ansteuern i2C,SPI und 4-Bit
+- Silvesterraketen elektronische Payload und das Recht§.
+- Solid Internet von Tim Berners-Lee
+- SSH-Logging auswerten mit einem Perlscript
+- 433 MHz und der Manchester-Code
+- Verkehrsprobleme lösen: Tesla, Wasserstoff oder Umzug
+- VHS-Linux-Anfängerabend muss vorbereitet werden
 
 
 ### Monat 1
 05.01.2021
 
-<ul><li>Mozilla Syncserver für Firefox selbst hosten.</li>
-<li>IRC was war das? Gibts noch: irc.uugrn.org #uugrn Test123.</li>
-<li>Worms Corona da wird nichts besser. Es gibt Privatparties.</li>
-<li>C# 20 Minuten Vortrag kommt.</li>
-<li>März VHS-Vortrag. Einführung in Linux. Wir wollen LPIC essentials nutzen.</li>
-<li>Crypto mit Hardware.</li>
-<li>Transport Protokoll von Google.</li>
-<li>Gnuplot Grafik anpassen.</li></ul>
+- Mozilla Syncserver für Firefox selbst hosten.
+- IRC was war das? Gibts noch: irc.uugrn.org #uugrn Test123.
+- Worms Corona da wird nichts besser. Es gibt Privatparties.
+- C# 20 Minuten Vortrag kommt.
+- März VHS-Vortrag. Einführung in Linux. Wir wollen LPIC essentials nutzen.
+- Crypto mit Hardware.
+- Transport Protokoll von Google.
+- Gnuplot Grafik anpassen.
