--- a/blog/2022-11-17-stammtische-2023.md
+++ b/blog/2022-11-17-stammtische-2023.md
@@ -5,6 +5,8 @@ date: '2022-11-04 07:34:00'
 
 **Kurze Zusammenfassung der Themen der Abende. Nicht nur Linux**
 
+<!--truncate-->
+
 ### Monat 12
 05.12.2023
 - Bierbrauen in Franken speziell in Erlangen Burgberg
@@ -184,4 +186,3 @@ date: '2022-11-04 07:34:00'
 - Webseite von Wolust zu kompliziert ?
 - E-Autos und Entwicklung von Batterie und Motor
 - Wasserstoff
-
