--- a/docs/404.md
+++ b/docs/404.md
@@ -3,20 +3,19 @@ title: 404
 ---
 
 # 404
-<pre>
- ________________________________________
+
+```
+________________________________________
 /  Entschuldigung, aber diese Seite kann  \
 |  die Kuh bei Wolust.de nicht finden !    |
 \  Muh !                                  /
  ----------------------------------------
       \
        \   ^__^
-               \  (oo)\_______
-                      (__)\       )\/\
-                      ||----w |
-                      ||     ||
-</pre>
-<div class="mt3">
-  <a href="/" class="button button-blue button-big">Home</a>
-  <a href="/contact" class="button button-blue button-big">Contact</a>
-</div>
+           (oo)\_______
+           (__)\       )\/\
+               ||----w |
+               ||     ||
+```               
+
+[Home](/)  [Contact](/contact)
