chore: update link for Dankward's Micropython presentation in event markdown

--- a/blog/2022-11-17-stammtische-2023.md
+++ b/blog/2022-11-17-stammtische-2023.md
@@ -24,7 +24,7 @@ date: '2022-11-04 07:34:00'
 24.11.2023
 - Linux Presentation Day 23-2 Nachmittag an der Hochschule Worms
 - Bash ganz einfach Stefan [Folie](https://github.com/dewomser/BASH-LPD2023/)
-- Micropython und Raspbery pico Dankward [Folie](../../../../../../../dankward_lpd23_2_vortrag)
+- Micropython und Raspbery pico Dankward [Folie](/docs/dankward_lpd23_2_vortrag)
 - Linux und Android auf dem Handy Klaus
 - Distributionen und Lizenzen Prof Thielen
 
