Avatare für Linkliste

--- a/_linkliste/wolust250804.md
+++ b/_linkliste/wolust250804.md
@@ -2,12 +2,12 @@
 
 Hamburger Tor in Worms [Link](https://hamburger-tor.de)
 
-Inhalt von Ordner auf valides Yaml testen. Ein Bashcript von @dewomser : [Link](https://gist.github.com/dewomser/7e8da29e8e2006757776508fddcbc0cf)
+Inhalt von Ordner auf valides Yaml testen. Ein Bashcript von [{% avatar dewomser %}](https://github.com/dewomser): [Link](https://gist.github.com/dewomser/7e8da29e8e2006757776508fddcbc0cf)
 
-Sehr einfaches, kurzes  Javascript + CSS macht ein Cookiebanner von @dewomser. Wird  hier benutzt : [Link](https://gist.github.com/dewomser/d4fc4ba97072df1003cb5a61a534d8b6)
+Sehr einfaches, kurzes  Javascript + CSS macht ein Cookiebanner von [{% avatar dewomser %}](https://github.com/dewomser). Wird  hier benutzt : [Link](https://gist.github.com/dewomser/d4fc4ba97072df1003cb5a61a534d8b6)
 
 Spezial-LLM Notebook von Google: [Link](https://notebook.ml)
 
-Noch mehr über KI, LLM und Vibecoding von @cmuench . Macht mit bei Wolust: [Link](https://muench.dev/)
+Noch mehr über KI, LLM und Vibecoding von [{% avatar cmuench %}](https://github.com/cmuench) . Macht mit bei Wolust: [Link](https://muench.dev/)
 
 Krieg in der Ukraine  aus radikal christlicher Sicht. Video mit Eugen Drewemann. So ähnlich sieht das auch der @dewomser , nur ist der kein Christ mehr: [Link](https://www.youtube.com/watch?v=dEow3kPoA8Q)
