--- a/_linkliste/wolust250804.md
+++ b/_linkliste/wolust250804.md
@@ -11,3 +11,8 @@ Spezial-LLM Notebook von Google: [Link](https://notebook.ml)
 Noch mehr über KI, LLM und Vibecoding von [{% avatar cmuench %}](https://github.com/cmuench) . Macht mit bei Wolust: [Link](https://muench.dev/)
 
 Krieg in der Ukraine  aus radikal christlicher Sicht. Video mit Eugen Drewemann. So ähnlich sieht das auch der @dewomser , nur ist der kein Christ mehr: [Link](https://www.youtube.com/watch?v=dEow3kPoA8Q)
+
+Radar Bewegungssensor Steinel SIR13 Radarbewebungssensorplatinchen an einen #Arduino  Mega angeschlossen 
+hat @dewomser mitgebracht und live vorgeführt. Teil ist beim Ausschlachten aus einem Gerät gefallen.[User-Manual](https://fccid.io/W8J-SIR13/User-Manual)
+
+KDE-Plasma API für Mediaplayer MPRIS [Link](https://community.kde.org/MPRIS)
