link neue Homepage test  verlinkt

--- a/_linkliste/wolust250804.md
+++ b/_linkliste/wolust250804.md
@@ -10,6 +10,8 @@ Spezial-LLM Notebook von Google: [Link](https://notebook.ml)
 
 Noch mehr über KI, LLM und Vibecoding von [{% avatar cmuench %}](https://github.com/cmuench) . Macht mit bei Wolust: [Link](https://muench.dev/)
 
+Testversion für eine neue Homepage für Wolust von [{% avatar cmuench %}](https://github.com/cmuench) [link](https://github.com/dewomser/wolust_25.github.io)
+
 Krieg in der Ukraine  aus radikal christlicher Sicht. Video mit Eugen Drewemann. So ähnlich sieht das auch der @dewomser , nur ist der kein Christ mehr: [Link](https://www.youtube.com/watch?v=dEow3kPoA8Q)
 
 Radar Bewegungssensor Steinel SIR13 Radarbewebungssensorplatinchen an einen #Arduino  Mega angeschlossen 
