Change event location to Brauhaus 12 Apostel
Updated location details for the next event.

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -20,14 +20,14 @@ Diesmal nicht im Timescafe
  <li>WOLUST jeden Monat am 1. Dienstag</li>
  </ul>
   Im [Timescafe](http://www.timescafe.de), Worms Ludwigsplatz / im Sommer sitzen wir gern draußen.
-{% elsif next.ort contains "satware" %}
-  {% assign ort = "satware AG" %}
-  {% assign geo = "49.633636, 8.351347" %}
-  Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} bei der Firma satware AG Friedrich-Ebert-Straße 34
+{% elsif next.ort contains "Brauhaus" %}
+  {% assign ort = "Brauhaus 12 Aostel" %}
+  {% assign geo = "49.63114, 8.35436" %}
+  Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} im Brauhaus 12 Apostel Alzeyerstr.31 in Worms
   <ul>
   <li>WOLUST jeden Monat am 1. Dienstag</li>
   </ul>
-  Ausnahmsweise dort.
+  Ausnahmsweise dort weil das Timescafe renoviert wird.
 {% else %}
   {% assign ort = "dummy" %}
  Keine Karte gefunden. Exception 404
