Fix typo in Brauhaus name in lolo.md

--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -21,7 +21,7 @@ Diesmal nicht im Timescafe
  </ul>
   Im [Timescafe](http://www.timescafe.de), Worms Ludwigsplatz / im Sommer sitzen wir gern draußen.
 {% elsif next.ort contains "Brauhaus" %}
-  {% assign ort = "Brauhaus 12 Aostel" %}
+  {% assign ort = "Brauhaus 12 Apostel" %}
   {% assign geo = "49.631009, 8.350557" %}
   Wir sind am {{next.tag}}.{{next.monat}}.{{next.jahr}} um {{next.start}} im Brauhaus 12 Apostel Alzeyerstr.31 in Worms
   <ul>
