--- a/_posts/2022-11-19-lolo.md
+++ b/_posts/2022-11-19-lolo.md
@@ -2,6 +2,7 @@
 title: Termine
 date: '2025-09-22 08:34:00'
 update_date: "''"
+update: "''"
 ---
 
 {% assign next = site.data.daten.linuxuser[0] %}
